src/parser/snapshots/crochet__parser__tests__blocks-2.snap
---
source: src/parser/mod.rs
expression: "parse(\"let foo = {let x = 5; let y = 10; x + y}\")"
---
Program {
    body: [
        VarDecl {
            span: 0..40,
            pattern: Ident(
                BindingIdent {
                    span: 4..7,
                    id: Ident {
                        span: 4..7,
                        name: "foo",
                    },
                    type_ann: None,
                },
            ),
            init: Some(
                Let(
                    Let {
                        span: 15..39,
                        pattern: Some(
                            Ident(
                                BindingIdent {
                                    span: 15..16,
                                    id: Ident {
                                        span: 15..16,
                                        name: "x",
                                    },
                                    type_ann: None,
                                },
                            ),
                        ),
                        init: Lit(
                            Num(
                                Num {
                                    span: 19..20,
                                    value: "5",
                                },
                            ),
                        ),
                        body: Let(
                            Let {
                                span: 26..39,
                                pattern: Some(
                                    Ident(
                                        BindingIdent {
                                            span: 26..27,
                                            id: Ident {
                                                span: 26..27,
                                                name: "y",
                                            },
                                            type_ann: None,
                                        },
                                    ),
                                ),
                                init: Lit(
                                    Num(
                                        Num {
                                            span: 30..32,
                                            value: "10",
                                        },
                                    ),
                                ),
                                body: Op(
                                    Op {
                                        span: 34..39,
                                        op: Add,
                                        left: Ident(
                                            Ident {
                                                span: 34..35,
                                                name: "x",
                                            },
                                        ),
                                        right: Ident(
                                            Ident {
                                                span: 38..39,
                                                name: "y",
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                    },
                ),
            ),
            declare: false,
        },
    ],
}
