src/parser/snapshots/crochet__parser__tests__member_access-2.snap
---
source: src/parser/mod.rs
expression: "parse(\"foo.bar()\")"
---
Program {
    body: [
        Expr {
            span: 0..9,
            expr: App(
                App {
                    span: 0..9,
                    lam: Member(
                        Member {
                            span: 0..7,
                            obj: Ident(
                                Ident {
                                    span: 0..3,
                                    name: "foo",
                                },
                            ),
                            prop: Ident(
                                Ident {
                                    span: 3..7,
                                    name: "bar",
                                },
                            ),
                        },
                    ),
                    args: [],
                },
            ),
        },
    ],
}
